feat: cnosdbwriter config updates; improve request builder